 . CocosDenshion: fixed small leak in background music file name string (issue #644)
 . CocosDenshion: CDAudioManager support for multiple AVAudioPlayers (issue #764)
 . Compatiblity: TextureNode is subclass of CCSprite (issue #755)
 . Node: only uses bits as bools, when they are not properties (fixed issue #743)
 . Node: relativeAnchorPoint renamed to isRelativeAnchorPoint (issue #749)
 . Sprite: use correct blending functions (issue #728)
 . Sprite: supports CGImageRef with key (issue #349)
 . Sprite: when texture is nil, supports opacity & color (issue #741)
 . Sprite: setTextureRect() and setColor() works OK with subchildren (issue #763)
 . SpriteFrameCache: removed @syncronized() (issue #663)
 . Template: box2d template treats warnings as erros, uses unroll loops for performance (issue #750)
 . TMX: filling empty tiles doesn't crash (issue #740)
 . TMX: if compression is not "gzip", abort (tiled 0.4 feature) (issue #XXX)
 
version 0.99.0-rc - 31-Jan-2010
 . All: Default OpenGL state is: GL_TEXTURE_2D, GL_VERTEX_ARRAY, GL_COLOR_ARRAY, GL_TEXTURE_COORD_ARRAY (issue #718)
 . Action: Improved CCSequence performance (issue #XXX)
 . BitmapFontAtlas: huge performance boost in update/create time (issue #730)
 . Box2d: updated to r39 (issue #494)
 . Camera: Offset fixed in landscape mode (issue #378)
 . Camera: It's possible to orbit around any point (issue #438)
 . Camera: Doesn't reset affine matrix (issue #XXX)
 . Chipmunk: Using Chipmunk v5.1.0 (issue #664)
 . Configuration: added object that knows GL capabilities and other misc stuff (issue #712)
 . Director/Particles/Grid: removed hardcoded display size values. Using variable (issue #XXX)
 . Director: send "cleanup" message to root scene when it is being replaced (issue #709)
 . Effects: works independently of the display resolution (issue #XXX)
 . Grid: optimized code. Only call camera.locate if it is dirty (issue #XXX)