@@ -12,6 +12,7 @@ version 0.99.0 - XX-MMM-2010
  . Compatiblity: TextureNode is subclass of CCSprite (issue #755)
  . Node: only uses bits as bools, when they are not properties (fixed issue #743)
  . Node: relativeAnchorPoint renamed to isRelativeAnchorPoint (issue #749)
+ . Node: improved doxygen string in rotation (issue #761)
  . Sprite: use correct blending functions (issue #728)
  . Sprite: supports CGImageRef with key (issue #349)
  . Sprite: when texture is nil, supports opacity & color (issue #741)
